# seneca

./: .envrc  Cargo.toml  README.md  default.nix  flake.nix
assets/: config.toml
src/: mail.rs  main.rs
src/ui/: email.rs  mod.rs  search_list.rs  thread_list.rs  virt_list.rs
