[package]
name = "seneca"
version = "0.1.0"
authors = ["Ross Schulman <ross@rbs.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.12"
chrono = "*"
notmuch = "*"
dirs = "4.0"
itertools = "0.10.0"
mailparse = "0.13.2"

[dependencies.druid]
git = "https://github.com/rschulman/druid.git"
features = ["im"]